--- a/gradle.properties
+++ b/gradle.properties
@@ -16,9 +16,11 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-VERSION_NAME=1.2.1
-VERSION_CODE=121
-GROUP=com.github.gcacace
+# NOTICE: Modified by @richardleggett to create a version for JitPack that includes
+# commits since the last stale release 1.2.1
+VERSION_NAME=1.2.2
+VERSION_CODE=122
+GROUP=com.github.richardleggett
 
 POM_NAME=Signature Pad
 POM_ARTIFACT_ID=android-signaturepad
